--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.0/swiper-bundle.css">
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link
   rel="stylesheet"
   href="https://unpkg.com/simplebar@latest/dist/simplebar.css"
 />
-    <link rel="stylesheet" href="/css/burger.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/burger.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.0/swiper-bundle.min.js" defer></script>
     <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
-    <script src="/js/index.js" defer></script>
+    <script src="js/index.js" defer></script>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                     <span class="line hover"></span>
                     <span class="line hover"></span>
                 </button>
-                <a class="header-logo" href="/"><img src="/images/logo.svg" alt="логотип" /></a>
+                <a class="header-logo" href="/"><img src="images/logo.svg" alt="логотип" /></a>
                 <ul class="header-top-list">
                     <li class="header-top-item">
                         <a href="/">
@@ -227,7 +227,7 @@
                         <div class="catalog-right-scrollbar">
                             <ul class="catalog-list">
                                 <li class="catalog-list-item">
-                                    <div class="catalog-img"><img src="/images/balls.webp" alt="Шарики" /></div>
+                                    <div class="catalog-img"><img src="images/balls.webp" alt="Шарики" /></div>
                                     <h3 class="catalog-list-h3">Разноцветный микс</h3>
                                     <p class="catalog-list-p">
                                         Время полета: от 1 дня до месяца<br />
@@ -238,7 +238,7 @@
                                     <button class="catalog-list-btn">Добавить в корзину</button>
                                 </li>
                                 <li class="catalog-list-item">
-                                    <div class="catalog-img"><img src="/images/balls.webp" alt="Шарики" /></div>
+                                    <div class="catalog-img"><img src="images/balls.webp" alt="Шарики" /></div>
                                     <h3 class="catalog-list-h3">Разноцветный микс</h3>
                                     <p class="catalog-list-p">
                                         Время полета: от 1 дня до месяца<br />
@@ -249,7 +249,7 @@
                                     <button class="catalog-list-btn">Добавить в корзину</button>
                                 </li>
                                 <li class="catalog-list-item">
-                                    <div class="catalog-img"><img src="/images/balls.webp" alt="Шарики" /></div>
+                                    <div class="catalog-img"><img src="images/balls.webp" alt="Шарики" /></div>
                                     <h3 class="catalog-list-h3">Разноцветный микс</h3>
                                     <p class="catalog-list-p">
                                         Время полета: от 1 дня до месяца<br />
@@ -260,7 +260,7 @@
                                     <button class="catalog-list-btn">Добавить в корзину</button>
                                 </li>
                                 <li class="catalog-list-item">
-                                    <div class="catalog-img"><img src="/images/balls.webp" alt="Шарики" /></div>
+                                    <div class="catalog-img"><img src="images/balls.webp" alt="Шарики" /></div>
                                     <h3 class="catalog-list-h3">Разноцветный микс</h3>
                                     <p class="catalog-list-p">
                                         Время полета: от 1 дня до месяца<br />
@@ -271,7 +271,7 @@
                                     <button class="catalog-list-btn">Добавить в корзину</button>
                                 </li>
                                 <li class="catalog-list-item">
-                                    <div class="catalog-img"><img src="/images/balls.webp" alt="Шарики" /></div>
+                                    <div class="catalog-img"><img src="images/balls.webp" alt="Шарики" /></div>
                                     <h3 class="catalog-list-h3">Разноцветный микс</h3>
                                     <p class="catalog-list-p">
                                         Время полета: от 1 дня до месяца<br />
@@ -282,7 +282,7 @@
                                     <button class="catalog-list-btn">Добавить в корзину</button>
                                 </li>
                                 <li class="catalog-list-item">
-                                    <div class="catalog-img"><img src="/images/balls.webp" alt="Шарики" /></div>
+                                    <div class="catalog-img"><img src="images/balls.webp" alt="Шарики" /></div>
                                     <h3 class="catalog-list-h3">Разноцветный микс</h3>
                                     <p class="catalog-list-p">
                                         Время полета: от 1 дня до месяца<br />
@@ -293,7 +293,7 @@
                                     <button class="catalog-list-btn">Добавить в корзину</button>
                                 </li>
                                 <li class="catalog-list-item">
-                                    <div class="catalog-img"><img src="/images/balls.webp" alt="Шарики" /></div>
+                                    <div class="catalog-img"><img src="images/balls.webp" alt="Шарики" /></div>
                                     <h3 class="catalog-list-h3">Разноцветный микс</h3>
                                     <p class="catalog-list-p">
                                         Время полета: от 1 дня до месяца<br />
@@ -304,7 +304,7 @@
                                     <button class="catalog-list-btn">Добавить в корзину</button>
                                 </li>
                                 <li class="catalog-list-item">
-                                    <div class="catalog-img"><img src="/images/balls.webp" alt="Шарики" /></div>
+                                    <div class="catalog-img"><img src="images/balls.webp" alt="Шарики" /></div>
                                     <h3 class="catalog-list-h3">Разноцветный микс</h3>
                                     <p class="catalog-list-p">
                                         Время полета: от 1 дня до месяца<br />
@@ -315,7 +315,7 @@
                                     <button class="catalog-list-btn">Добавить в корзину</button>
                                 </li>
                                 <li class="catalog-list-item">
-                                    <div class="catalog-img"><img src="/images/balls.webp" alt="Шарики" /></div>
+                                    <div class="catalog-img"><img src="images/balls.webp" alt="Шарики" /></div>
                                     <h3 class="catalog-list-h3">Разноцветный микс</h3>
                                     <p class="catalog-list-p">
                                         Время полета: от 1 дня до месяца<br />
