--- a/index.html
+++ b/index.html
@@ -463,12 +463,12 @@
                     <li class="ourWork-list-item"><img
                             src="https://images.wallpaperscraft.ru/image/kot_morda_glaza_polosatyy_40098_1366x768.jpg"
                             alt="Наша работа"></li>
-                    <li class="ourWork-list-item"><img src="/images/work.jpg" alt="Наша работа"></li>
-                    <li class="ourWork-list-item"><img src="/images/work.jpg" alt="Наша работа"></li>
-                    <li class="ourWork-list-item"><img src="/images/work.jpg" alt="Наша работа"></li>
-                    <li class="ourWork-list-item"><img src="/images/work.jpg" alt="Наша работа"></li>
-                    <li class="ourWork-list-item"><img src="/images/work.jpg" alt="Наша работа"></li>
-                    <li class="ourWork-list-item ourwork-hidden"><img src="/images/work.jpg" alt="Наша работа"></li>
+                    <li class="ourWork-list-item"><img src="images/work.jpg" alt="Наша работа"></li>
+                    <li class="ourWork-list-item"><img src="images/work.jpg" alt="Наша работа"></li>
+                    <li class="ourWork-list-item"><img src="images/work.jpg" alt="Наша работа"></li>
+                    <li class="ourWork-list-item"><img src="images/work.jpg" alt="Наша работа"></li>
+                    <li class="ourWork-list-item"><img src="images/work.jpg" alt="Наша работа"></li>
+                    <li class="ourWork-list-item ourwork-hidden"><img src="images/work.jpg" alt="Наша работа"></li>
                 </ul>
                 <button class="ourwork-show">Показать еще</button>
             </div>
